--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webappclient",
   "version": "0.1.0",
+  "proxy": "http://localhost:7000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -10,13 +11,18 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
