--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.29.13",
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
@@ -25,7 +27,8 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
