--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
