--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "webappclient",
   "version": "0.1.0",
-  "proxy": "http://localhost:7000",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -25,6 +24,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
